# whisper-dictate

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  release.yml  test.yml
tests/: conftest.py  test_cli.py  test_config.py  test_recorder.py  test_transcriber.py  test_utils.py  test_visualizer.py
whisper_dictate/: __init__.py  __main__.py  cli.py  config.py  recorder.py  transcriber.py  utils.py  visualizer.py  window.py
