[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whisper-dictate"
version = "0.1.0"
description = "Local speech-to-text with visual feedback using whisper.cpp. Created with Claude Code."
readme = "README.md"
license = {text = "GPL-3.0"}
authors = [
    {name = "Jacob Pyke", email = "jacob@jacobpyke.xyz"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
keywords = ["whisper", "speech-to-text", "dictation", "transcription", "voice"]

dependencies = [
    "PyQt6>=6.4.0",
    "pyaudio>=0.2.13",
    "numpy>=1.24.0",
    "tomli>=2.0.0;python_version<'3.11'",
    "tomli-w>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.2.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/JPyke3/whisper-dictate"
Repository = "https://github.com/JPyke3/whisper-dictate"
Issues = "https://github.com/JPyke3/whisper-dictate/issues"

[project.scripts]
whisper-dictate = "whisper_dictate.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["whisper_dictate*"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=whisper_dictate --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["whisper_dictate"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
